[webauthn] Reland: Close AuthenticatorImpl bindings before callbacks are destroyed.

This will prevent crashing when a tab is closed while
an authenticator request is pending.

(Also remove some stray logs in authenticator_impl_unittest.cc).

This is a reland of https://crrev.com/c/905929, which
was reverted due to the movement of the //services/device/public/interfaces directory.
This fixes the include in webauth_browsertest.

Bug: 808096
Change-Id: Ia3ffee8deab4566844f839c6ead0b376749855a4
Reviewed-on: https://chromium-review.googlesource.com/937660
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Commit-Queue: Kim Paulhamus <kpaulhamus@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539572}