content/browser/webauth/authenticator_impl.cc
@@ -183,7 +183,9 @@ AuthenticatorImpl::AuthenticatorImpl(RenderFrameHost* render_frame_host,
   DCHECK(timer_);
 }
 
-AuthenticatorImpl::~AuthenticatorImpl() {}
+AuthenticatorImpl::~AuthenticatorImpl() {
+  bindings_.CloseAllBindings();
+}
 
 void AuthenticatorImpl::Bind(webauth::mojom::AuthenticatorRequest request) {
   bindings_.AddBinding(this, std::move(request));
