content/browser/webauth/authenticator_impl_unittest.cc
@@ -12,7 +12,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/json/json_parser.h"
 #include "base/json/json_writer.h"
-#include "base/logging.h"
 #include "base/run_loop.h"
 #include "base/test/gtest_util.h"
 #include "base/test/test_mock_time_task_runner.h"
@@ -344,15 +343,10 @@ TEST_F(AuthenticatorImplTest, MakeCredentialOriginAndRpIds) {
     AuthenticatorPtr authenticator = ConnectToAuthenticator();
     PublicKeyCredentialCreationOptionsPtr options =
         GetTestPublicKeyCredentialCreationOptions();
-    DLOG(INFO) << "got options";
     options->relying_party->id = test_case.relying_party_id;
-    DLOG(INFO) << options->relying_party->id;
     TestMakeCredentialCallback cb;
-    DLOG(INFO) << "got callback";
     authenticator->MakeCredential(std::move(options), cb.callback());
-    DLOG(INFO) << "called make cred";
     cb.WaitForCallback();
-    DLOG(INFO) << "finished waiting";
     EXPECT_EQ(webauth::mojom::AuthenticatorStatus::INVALID_DOMAIN,
               cb.GetResponseStatus());
   }
